--- a/cycle1.ipynb
+++ b/cycle1.ipynb
@@ -6,7 +6,7 @@
       "name": "cycle1",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN8Xwl0YhkdykArs3pXOZbl",
+      "authorship_tag": "ABX9TyMeiFq2eYSeOozk9g2Xj2wp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -312,6 +312,372 @@
           "text": [
             "Enter Year: 2008\n",
             "2008 is a Leap Year\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XLlexCgWYlQK",
+        "outputId": "1b1b5893-5ca4-4f7e-e1a5-433a617e55f0"
+      },
+      "source": [
+        "num = float(input(\"Enter a number: \"))\r\n",
+        "if num > 0:\r\n",
+        "   print(\"Positive number\")\r\n",
+        "elif num == 0:\r\n",
+        "   print(\"Zero\")\r\n",
+        "else:\r\n",
+        "   print(\"Negative number\")"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter a number: 5\n",
+            "Positive number\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KGBpjRW_fi6Y"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S5wkExTBfi9M",
+        "outputId": "7346ba41-e5a3-46ad-cb7d-0f81ee167472"
+      },
+      "source": [
+        "num = int(input(\"Enter a number: \"))  \r\n",
+        "  \r\n",
+        "if num < 0:  \r\n",
+        "   print(\"Enter a positive number\")  \r\n",
+        "else:  \r\n",
+        "   sum = 0  \r\n",
+        "   # use while loop to iterate un till zero  \r\n",
+        "   while(num > 0):  \r\n",
+        "       sum += num  \r\n",
+        "       num -= 1  \r\n",
+        "   print(\"The sum is\",sum)  "
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter a number: 10\n",
+            "The sum is 55\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mw5mP-Dnf838",
+        "outputId": "3c97df8a-099f-438d-cd4f-47f7aedb6110"
+      },
+      "source": [
+        "num = int(input(\"Enter a number: \"))  \r\n",
+        "factorial = 1  \r\n",
+        "if num < 0:  \r\n",
+        "   print(\"Sorry, factorial does not exist for negative numbers\")  \r\n",
+        "elif num == 0:  \r\n",
+        "   print(\"The factorial of 0 is 1\")  \r\n",
+        "else:  \r\n",
+        "   for i in range(1,num + 1):  \r\n",
+        "       factorial = factorial*i  \r\n",
+        "   print(\"The factorial of\",num,\"is\",factorial)  "
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter a number: 4\n",
+            "The factorial of 4 is 24\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KJG1krZGgXNo",
+        "outputId": "048a820b-b048-44e6-8fae-05c7b5d96562"
+      },
+      "source": [
+        "num = int(input(\"Enter the number: \"))\r\n",
+        "\r\n",
+        "print(\"Multiplication Table of\", num)\r\n",
+        "for i in range(1, 11):\r\n",
+        "   print(num,\"X\",i,\"=\",num * i)\r\n",
+        "   "
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter the number: 5\n",
+            "Multiplication Table of 5\n",
+            "5 X 1 = 5\n",
+            "5 X 2 = 10\n",
+            "5 X 3 = 15\n",
+            "5 X 4 = 20\n",
+            "5 X 5 = 25\n",
+            "5 X 6 = 30\n",
+            "5 X 7 = 35\n",
+            "5 X 8 = 40\n",
+            "5 X 9 = 45\n",
+            "5 X 10 = 50\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2cpVnlLlgbbb",
+        "outputId": "3d1202bf-68fe-4d75-e190-1528697c1b0b"
+      },
+      "source": [
+        "\r\n",
+        "def recur_fibo(n):\r\n",
+        "   if n <= 1:\r\n",
+        "       return n\r\n",
+        "   else:\r\n",
+        "       return(recur_fibo(n-1) + recur_fibo(n-2))\r\n",
+        "nterms = 10\r\n",
+        "if nterms <= 0:\r\n",
+        "   print(\"Plese enter a positive integer\")\r\n",
+        "else:\r\n",
+        "   print(\"Fibonacci sequence:\")\r\n",
+        "   for i in range(nterms):\r\n",
+        "       print(recur_fibo(i))"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Fibonacci sequence:\n",
+            "0\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "8\n",
+            "13\n",
+            "21\n",
+            "34\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "R9GNkKxqhdgZ"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "17apWzuJhdky",
+        "outputId": "677b5f90-4b9f-4745-c83f-a3007cf9a771"
+      },
+      "source": [
+        "a=int(input(\"Enter the first number:\"))\r\n",
+        "b=int(input(\"Enter the second number:\"))\r\n",
+        "if(a>b):\r\n",
+        "    min1=a\r\n",
+        "else:\r\n",
+        "    min1=b\r\n",
+        "while(1):\r\n",
+        "    if(min1%a==0 and min1%b==0):\r\n",
+        "        print(\"LCM is:\",min1)\r\n",
+        "        break\r\n",
+        "    min1=min1+1"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter the first number:5\n",
+            "Enter the second number:3\n",
+            "LCM is: 15\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VrOlLk8Gh0Kd",
+        "outputId": "faad869e-6aef-4c31-e279-bb0807339d88"
+      },
+      "source": [
+        "n=int(input(\"Enter number:\"))\r\n",
+        "count=0\r\n",
+        "while(n>0):\r\n",
+        "    count=count+1\r\n",
+        "    n=n//10\r\n",
+        "print(\"The number of digits in the number are:\",count)\r\n"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter number:4785\n",
+            "The number of digits in the number are: 4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GGlbG7imiKZK",
+        "outputId": "64311ed7-6071-4f44-92ad-b28307c23b2c"
+      },
+      "source": [
+        "\r\n",
+        "n = 4562; \r\n",
+        "rev = 0\r\n",
+        "  \r\n",
+        "while(n > 0): \r\n",
+        "    a = n % 10\r\n",
+        "    rev = rev * 10 + a \r\n",
+        "    n = n // 10\r\n",
+        "      \r\n",
+        "print(rev) \r\n",
+        "  "
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2654\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i5TiG-jijjqG",
+        "outputId": "3cfd22d5-8dbd-4ad7-b53f-47258e346df0"
+      },
+      "source": [
+        "def power(base,exp):\r\n",
+        "    if(exp==1):\r\n",
+        "        return(base)\r\n",
+        "    if(exp!=1):\r\n",
+        "        return(base*power(base,exp-1))\r\n",
+        "base=int(input(\"Enter base: \"))\r\n",
+        "exp=int(input(\"Enter exponential value: \"))\r\n",
+        "print(\"Result:\",power(base,exp))"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter base: 5\n",
+            "Enter exponential value: 4\n",
+            "Result: 625\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pmEH2ljejz4D",
+        "outputId": "38fe2bcc-85a3-4f7e-cc44-98023657c3f7"
+      },
+      "source": [
+        "n=int(input(\"Enter number:\"))\r\n",
+        "temp=n\r\n",
+        "rev=0\r\n",
+        "while(n>0):\r\n",
+        "    dig=n%10\r\n",
+        "    rev=rev*10+dig\r\n",
+        "    n=n//10\r\n",
+        "if(temp==rev):\r\n",
+        "    print(\"The number is a palindrome!\")\r\n",
+        "else:\r\n",
+        "    print(\"The number isn't a palindrome!\")"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter number:121\n",
+            "The number is a palindrome!\n"
           ],
           "name": "stdout"
         }
