--- a/cycle1.ipynb
+++ b/cycle1.ipynb
@@ -6,7 +6,7 @@
       "name": "cycle1",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNhdKQ8cbep9/sTsQKQG5F5",
+      "authorship_tag": "ABX9TyMpNFjxW6HVsTAPEc8tR0+T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,53 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/agnathomas/Python/blob/main/cycle1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VhfjlaXuBWo3",
+        "outputId": "cb147b91-50fc-45a0-b194-7c687cee0193",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(\"the value of\",a,\"is of the type\",type(a))\r\n",
+        "b=\"hello\"\r\n",
+        "print(\"the value of\",b,\"is of the type\",type(b))\r\n",
+        "c=3.14\t\r\n",
+        "print(\"the value of\",c,\"is of the type\",type(c))\r\n",
+        "d=2j\r\n",
+        "print(\"the value of\",d,\"is of the type\",type(d))\r\n",
+        "e={\"ads\",\"web\",\"python\"}\r\n",
+        "print(\"the value of\",e,\"is of the type\",type(e))\r\n",
+        "f=(\"ads\",\"web\",\"python\")\r\n",
+        "print(\"the value of\",f,\"is of the type\",type(f))\r\n",
+        "g=[\"ads\",\"web\",\"python\"]\r\n",
+        "print(\"the value of\",g,\"is of the type\",type(g))\r\n",
+        "h=range(5)\r\n",
+        "print(\"the value of\",h,\"is of the type\",type(h))\r\n",
+        "i=True\r\n",
+        "print(\"the value of\",i,\"is of the type\",type(i))\r\n"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "the value of 1 is of the type <class 'int'>\n",
+            "the value of hello is of the type <class 'str'>\n",
+            "the value of 3.14 is of the type <class 'float'>\n",
+            "the value of 2j is of the type <class 'complex'>\n",
+            "the value of {'python', 'web', 'ads'} is of the type <class 'set'>\n",
+            "the value of ('ads', 'web', 'python') is of the type <class 'tuple'>\n",
+            "the value of ['ads', 'web', 'python'] is of the type <class 'list'>\n",
+            "the value of range(0, 5) is of the type <class 'range'>\n",
+            "the value of True is of the type <class 'bool'>\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
