--- a/pycycle2.ipynb
+++ b/pycycle2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "pycycle2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO/p0Dr1aSw6VyP8aN9Cr2D",
+      "authorship_tag": "ABX9TyOoca1RVoNrd6NqXHeTihsr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -258,13 +258,63 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "h69rrKHSmSnI"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h69rrKHSmSnI",
+        "outputId": "1440e720-4704-4efe-dd32-58f53bf46559"
       },
       "source": [
-        ""
+        "#2:\r\n",
+        "y = int (input(\"Enter the final year:\"))\r\n",
+        "print(\"Future leap years from 2021:\")\r\n",
+        "for x in range(2021 , y+1):\r\n",
+        " if(x%4==0) and (x%100!=0) or (x%400==0):\r\n",
+        "    print(x)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter the final year:2030\n",
+            "Future leap years from 2021:\n",
+            "2024\n",
+            "2028\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "anCDHi9UKegg",
+        "outputId": "bf946bed-9bc3-48ef-b4ad-f4ee07993205"
+      },
+      "source": [
+        "#20.\r\n",
+        "list = [11, 22, 33, 44, 55]\r\n",
+        "print(\"Original list :\",list)\r\n",
+        "for i in list:\r\n",
+        "   if(i%2 == 0):\r\n",
+        "      list.remove(i)\r\n",
+        "print(\"List after removing Even numbers : \", list)      "
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Original list : [11, 22, 33, 44, 55]\n",
+            "List after removing Even numbers :  [11, 33, 55]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
