--- a/pycycle2.ipynb
+++ b/pycycle2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "pycycle2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOoca1RVoNrd6NqXHeTihsr",
+      "authorship_tag": "ABX9TyNQvU1w5yrTA7zrzqlwfvmD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
         "n3 = int( \"%s%s%s\" % (a,a,a) )\r\n",
         "print (n1+n2+n3)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -69,7 +69,7 @@
         "area = PI * r * r\r\n",
         "print(\"%.2f\" %area)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
         "\r\n",
         "print(\"The largest number is\", largest)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +130,7 @@
         "f = filename.split(\".\")\r\n",
         "print (\"Extension of the file is : \" + f[-1])"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +156,7 @@
         "color_list = [\"Red\",\"Green\",\"White\" ,\"Black\"]\r\n",
         "print( \"%s %s\"%(color_list[0],color_list[3]))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,7 +182,7 @@
         "color_list_2 = set([\"Red\", \"Green\"])\r\n",
         "print(color_list_1.difference(color_list_2))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,7 +210,7 @@
         "print('Updated dictionary 1 :')\r\n",
         "print(dict1)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,7 +242,7 @@
         "  i = i + 1\r\n",
         "print(\"GCD is\", gcd)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,7 +272,7 @@
         " if(x%4==0) and (x%100!=0) or (x%400==0):\r\n",
         "    print(x)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +304,7 @@
         "      list.remove(i)\r\n",
         "print(\"List after removing Even numbers : \", list)      "
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,6 +315,85 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mDNAX-JeP31_",
+        "outputId": "68195a89-0781-4821-a8d7-364170dde0f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#4.\n",
+        "def word_count(str):\n",
+        "    counts = dict()\n",
+        "    words = str.split()\n",
+        "\n",
+        "    for word in words:\n",
+        "        if word in counts:\n",
+        "            counts[word] += 1\n",
+        "        else:\n",
+        "            counts[word] = 1\n",
+        "\n",
+        "    return counts\n",
+        "\n",
+        "print( word_count('flowers are also called blossom.'))\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'flowers': 1, 'are': 1, 'also': 1, 'called': 1, 'blossom.': 1}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fSayO2x5Qf53",
+        "outputId": "111e1fc0-7ef4-4e56-adc8-9df16ae93236",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#6.\n",
+        "def countX(lst, x): \n",
+        "    count = 0\n",
+        "    for ele in lst: \n",
+        "        if (ele == x): \n",
+        "            count = count + 1\n",
+        "    return count \n",
+        "lst = [8, 6, 8, 10, 8, 20, 10, 8, 8] \n",
+        "x = 8\n",
+        "print('{} has occurred {} times'.format(x, countX(lst, x))) "
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "8 has occurred 5 times\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9Rc4--zoR72n"
+      },
+      "source": [
+        "#7.\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
