--- a/pycycle2.ipynb
+++ b/pycycle2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "pycycle2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNQvU1w5yrTA7zrzqlwfvmD",
+      "authorship_tag": "ABX9TyMu0YyIL/paEI7+cWoWVUim",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -320,28 +320,26 @@
       "cell_type": "code",
       "metadata": {
         "id": "mDNAX-JeP31_",
-        "outputId": "68195a89-0781-4821-a8d7-364170dde0f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "68195a89-0781-4821-a8d7-364170dde0f4"
       },
       "source": [
         "#4.\n",
         "def word_count(str):\n",
         "    counts = dict()\n",
         "    words = str.split()\n",
-        "\n",
         "    for word in words:\n",
         "        if word in counts:\n",
         "            counts[word] += 1\n",
         "        else:\n",
         "            counts[word] = 1\n",
-        "\n",
         "    return counts\n",
         "\n",
         "print( word_count('flowers are also called blossom.'))\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,29 +354,29 @@
       "cell_type": "code",
       "metadata": {
         "id": "fSayO2x5Qf53",
-        "outputId": "111e1fc0-7ef4-4e56-adc8-9df16ae93236",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "20f8f500-5a90-4e55-de87-d739baa3e320"
       },
       "source": [
         "#6.\n",
-        "def countX(lst, x): \n",
-        "    count = 0\n",
-        "    for ele in lst: \n",
-        "        if (ele == x): \n",
-        "            count = count + 1\n",
-        "    return count \n",
-        "lst = [8, 6, 8, 10, 8, 20, 10, 8, 8] \n",
-        "x = 8\n",
-        "print('{} has occurred {} times'.format(x, countX(lst, x))) "
+        "name = input(\"enter the names\")\n",
+        "list = []\n",
+        "count = 0\n",
+        "for x in name:\n",
+        "   list.append(x)\n",
+        "   if (x in name and x == 'a'):\n",
+        "      count = count + 1\n",
+        "print(count)"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "8 has occurred 5 times\n"
+            "enter the namesanu anju sam\n",
+            "3\n"
           ],
           "name": "stdout"
         }
@@ -387,13 +385,339 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9Rc4--zoR72n"
+        "id": "9Rc4--zoR72n",
+        "outputId": "dd29698a-5e54-4f00-d7fd-cd2267ac6670",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "#7.\n"
+        "#7(a).\n",
+        "list1 = [1, 2, 4, 3, 8]\n",
+        "list2 = [1, 2, 4, 3, 5]\n",
+        "print (\"the first list is :\" + str(list1))\n",
+        "print (\"the second list is :\" + str(list2))\n",
+        "l1 = len(list1)\n",
+        "l2 = len(list2)\n",
+        "print(\"length of list1 :\", l1 , \"and length of list2 :\", l2)\n",
+        "if l1 == l2:\n",
+        "   print (\"list are same length\")\n",
+        "else :\n",
+        "    print (\"list are of different length\")\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "the first list is :[1, 2, 4, 3, 8]\n",
+            "the second list is :[1, 2, 4, 3, 5]\n",
+            "length of list1 : 5 and length of list2 : 5\n",
+            "list are same length\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5FyFOLbR18NP",
+        "outputId": "2f4bcf94-cd97-41cd-babc-866c3d18a0bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#7(b)\r\n",
+        "list1 = [1, 2, 4, 3, 8]\r\n",
+        "list2 = [1, 2, 4, 3, 5]\r\n",
+        "print (\"the first list is :\" + str(list1))\r\n",
+        "print (\"the second list is :\" + str(list2))\r\n",
+        "sum1 = 0\r\n",
+        "sum2 = 0\r\n",
+        "for x in range(0, len(list1)):\r\n",
+        "    sum1 = sum1 + list1[x]\r\n",
+        "print (\"sum of all elements in given list1 :\", sum1)\r\n",
+        "for x in range(0, len(list2)):\r\n",
+        "   sum2 = sum2 + list2[x]   \r\n",
+        "print (\"sum of all elements in given list2 :\", sum2)\r\n",
+        "if ( sum1 == sum2):\r\n",
+        "   print (\"list sum to same value\") \r\n",
+        "else:\r\n",
+        "   print(\"list are of different sum\")"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "the first list is :[1, 2, 4, 3, 8]\n",
+            "the second list is :[1, 2, 4, 3, 5]\n",
+            "sum of all elements in given list1 : 18\n",
+            "sum of all elements in given list2 : 15\n",
+            "list are of different sum\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Kbd5E9Qv2EHP",
+        "outputId": "4a6be333-0ca9-46b7-c769-1684cde07519",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#7(c).\r\n",
+        "list1 = [1, 2, 4, 3, 8]\r\n",
+        "list2 = [1, 2, 4, 3, 5]\r\n",
+        "print (\"the first  list is :\" + str(list1))\r\n",
+        "print (\"the second list is :\" + str(list2))\r\n",
+        "print (\"the values occur in both lists :\")\r\n",
+        "for x in list1:\r\n",
+        "   if(x in list1 and x in list2):\r\n",
+        "      print(x)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "the first  list is :[1, 2, 4, 3, 8]\n",
+            "the second list is :[1, 2, 4, 3, 5]\n",
+            "the values occur in both lists :\n",
+            "1\n",
+            "2\n",
+            "4\n",
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i9qsPO482emQ",
+        "outputId": "4ce537cb-915a-40fb-fcf8-ca425408f0c0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#5.1090\r\n",
+        "\r\n",
+        "x = []\r\n",
+        "n = int(input(\"enter any integers:\"))\r\n",
+        "for i in range(1, n+1):\r\n",
+        "  a = int(input())\r\n",
+        "  if (a>100):\r\n",
+        "    x.append('over')\r\n",
+        "  else:\r\n",
+        "     x.append(a)\r\n",
+        "print(\"modified list:\", x)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "enter any integers:5\n",
+            "140\n",
+            "152\n",
+            "0\n",
+            "120\n",
+            "141\n",
+            "modified list: ['over', 'over', 0, 'over', 'over']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zy-9ZMo33Ne2",
+        "outputId": "6b481054-a122-4378-a016-023b67ccd8c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#8.\r\n",
+        "def change_char(str1):\r\n",
+        "  char = str1[0]\r\n",
+        "  str1 = str1.replace(char, '$')\r\n",
+        "  str1 = char + str1[1:]\r\n",
+        "  return str1\r\n",
+        "print(change_char('agna'))"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "agn$\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CgIGKpIp4LCb",
+        "outputId": "7c1c9e97-aaf5-4e87-ac6b-a21d5ee440ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#9.\r\n",
+        "a = input(\"enter a string\")\r\n",
+        "print(\"new string :\")\r\n",
+        "print(a[-1:] + a[1:-1] + a[0])"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "enter a string python\n",
+            "new string :\n",
+            "npytho \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eWlUZ8_04c3i",
+        "outputId": "44a136b6-e9f0-47ff-fdd8-ecaa6832287b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#16.\r\n",
+        "def chars_mix_up(a, b):\r\n",
+        "  new_a = b[:2] + a[2:]\r\n",
+        "  new_b = a[:2] + b[2:]\r\n",
+        "\r\n",
+        "  return new_a + ' ' + new_b\r\n",
+        "print(chars_mix_up('agna', 'thomas'))"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "thna agomas\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2-IErMwj5brR",
+        "outputId": "747bc7b6-a1d6-42b3-aaef-029ea47a66de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#3(a).\r\n",
+        "mylist =[12, 34, 56, -9, -7]\r\n",
+        "print(\"firstlist:\" , mylist)\r\n",
+        "newlist =[x for x in mylist if x > 0]\r\n",
+        "print(\"newlist :\",newlist)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "firstlist: [12, 34, 56, -9, -7]\n",
+            "newlist : [12, 34, 56]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0cEU1h8d5k1m",
+        "outputId": "b5928ae0-1b71-42ab-d0b5-6438f4243cc9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#3(b).n=int(input(\"enter ther limit\"))\r\n",
+        "l=[]\r\n",
+        "for i in range(0, n):\r\n",
+        "  num=int(input(\"enter no:\"))\r\n",
+        "  l.append(num)\r\n",
+        "print(\"entered list\", l)\r\n",
+        "l1=[i*i for i in l]\r\n",
+        "print(\"list of squres\",l1)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "enter no:4\n",
+            "enter no:5\n",
+            "enter no:7\n",
+            "enter no:2\n",
+            "enter no:6\n",
+            "entered list [4, 5, 7, 2, 6]\n",
+            "list of squres [16, 25, 49, 4, 36]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NirCP0Hk50xZ",
+        "outputId": "2544033e-98d9-4525-98b1-229315528d4c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#3(c).\r\n",
+        "word = input(\"enter a word\")\r\n",
+        "vowels= ['a', 'e', 'i', 'o', 'u']\r\n",
+        "list= []\r\n",
+        "for x in word:\r\n",
+        "  if(x in vowels and x not in list):\r\n",
+        "    list.append(x)\r\n",
+        "print(\"vowel present in the given word is:\",list)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "enter a wordagna\n",
+            "vowel present in the given word is: ['a']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
