--- a/pycycle2.ipynb
+++ b/pycycle2.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "pycycle2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMu0YyIL/paEI7+cWoWVUim",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,11 +33,11 @@
         "outputId": "c5b176a1-b838-45f8-9d10-ed1c98c3216a"
       },
       "source": [
-        "#14.\r\n",
-        "a = int(input(\"Input an integer : \"))\r\n",
-        "n1 = int( \"%s\" % a )\r\n",
-        "n2 = int( \"%s%s\" % (a,a) )\r\n",
-        "n3 = int( \"%s%s%s\" % (a,a,a) )\r\n",
+        "#14.\n",
+        "a = int(input(\"Input an integer : \"))\n",
+        "n1 = int( \"%s\" % a )\n",
+        "n2 = int( \"%s%s\" % (a,a) )\n",
+        "n3 = int( \"%s%s%s\" % (a,a,a) )\n",
         "print (n1+n2+n3)"
       ],
       "execution_count": null,
@@ -56,6 +55,57 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Ci1Jjh-5kFxZ",
+        "outputId": "4afd1b3b-a301-4cd1-9f16-2ef119c6a406",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#1.\n",
+        "n=input(\"Enter your House Number:\")\n",
+        "hname=input(\"Enter your House Name:\")\n",
+        "s=input(\"Enter your street Name:\")\n",
+        "t=input(\"Enter your Town/City:\")\n",
+        "d=input(\"Enter your District:\")\n",
+        "state=input(\"Enter your State:\")\n",
+        "country=input(\"Enter your Country:\")\n",
+        "pin=int(input(\"Enter your Postcode:\"))\n",
+        "print(\"\\nAddress Details:\\n\" +\"\\n Housenumber :\",n,\"\\nHouse :\",hname,\"\\nStreet:\",s,\"\\nTown/City:\",t,\"\\nDistrict:\",d,\"\\nState:\",state,\"\\nCountry:\",country,\"\\nPostcode:\",pin)\n",
+        " \n"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter your House Number:1234\n",
+            "Enter your House Name:AGB\n",
+            "Enter your street Name:bnm\n",
+            "Enter your Town/City:ert\n",
+            "Enter your District:kkm\n",
+            "Enter your State:asd\n",
+            "Enter your Country:jhg\n",
+            "Enter your Postcode:657410\n",
+            "\n",
+            "Address Details:\n",
+            "\n",
+            " Housenumber : 1234 \n",
+            "House : AGB \n",
+            "Street: bnm \n",
+            "Town/City: ert \n",
+            "District: kkm \n",
+            "State: asd \n",
+            "Country: jhg \n",
+            "Postcode: 657410\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -63,10 +113,10 @@
         "outputId": "67ebdab3-477a-4155-b215-b41053927651"
       },
       "source": [
-        "#10.\r\n",
-        "PI = 3.14\r\n",
-        "r = float(input(\"Enter the radius of the circle: \"))\r\n",
-        "area = PI * r * r\r\n",
+        "#10.\n",
+        "PI = 3.14\n",
+        "r = float(input(\"Enter the radius of the circle: \"))\n",
+        "area = PI * r * r\n",
         "print(\"%.2f\" %area)"
       ],
       "execution_count": null,
@@ -91,17 +141,17 @@
         "outputId": "4c1c8d0b-ff28-4c15-a0d5-84a5f9b51c7a"
       },
       "source": [
-        "#11.\r\n",
-        "num1 = 18\r\n",
-        "num2 = 24\r\n",
-        "num3 = 22\r\n",
-        "if (num1 >= num2) and (num1 >= num3):\r\n",
-        "   largest = num1\r\n",
-        "elif (num2 >= num1) and (num2 >= num3):\r\n",
-        "   largest = num2\r\n",
-        "else:\r\n",
-        "   largest = num3\r\n",
-        "\r\n",
+        "#11.\n",
+        "num1 = 18\n",
+        "num2 = 24\n",
+        "num3 = 22\n",
+        "if (num1 >= num2) and (num1 >= num3):\n",
+        "   largest = num1\n",
+        "elif (num2 >= num1) and (num2 >= num3):\n",
+        "   largest = num2\n",
+        "else:\n",
+        "   largest = num3\n",
+        "\n",
         "print(\"The largest number is\", largest)"
       ],
       "execution_count": null,
@@ -125,9 +175,9 @@
         "outputId": "eb83d252-14ff-4f5d-eda5-e27bcb4ff510"
       },
       "source": [
-        "#12.\r\n",
-        "filename= input(\"Enter Filename: \")\r\n",
-        "f = filename.split(\".\")\r\n",
+        "#12.\n",
+        "filename= input(\"Enter Filename: \")\n",
+        "f = filename.split(\".\")\n",
         "print (\"Extension of the file is : \" + f[-1])"
       ],
       "execution_count": null,
@@ -152,8 +202,8 @@
         "outputId": "0e3d4e20-1739-436d-ab86-339c98e583d7"
       },
       "source": [
-        "#13.\r\n",
-        "color_list = [\"Red\",\"Green\",\"White\" ,\"Black\"]\r\n",
+        "#13.\n",
+        "color_list = [\"Red\",\"Green\",\"White\" ,\"Black\"]\n",
         "print( \"%s %s\"%(color_list[0],color_list[3]))"
       ],
       "execution_count": null,
@@ -177,9 +227,9 @@
         "outputId": "1cba75db-49a6-4764-a808-7620a55a0ce0"
       },
       "source": [
-        "#15.\r\n",
-        "color_list_1 = set([\"White\", \"Black\", \"Red\"])\r\n",
-        "color_list_2 = set([\"Red\", \"Green\"])\r\n",
+        "#15.\n",
+        "color_list_1 = set([\"White\", \"Black\", \"Red\"])\n",
+        "color_list_2 = set([\"Red\", \"Green\"])\n",
         "print(color_list_1.difference(color_list_2))"
       ],
       "execution_count": null,
@@ -203,11 +253,11 @@
         "outputId": "1b4f7064-e42e-4534-e5a2-25e2c10d7d47"
       },
       "source": [
-        "#18.\r\n",
-        "dict1 = {  'Anu': 5, 'Don': 7, 'Akku' : 10 }\r\n",
-        "dict2 = {'Aksa': 8,'Alex': 20,'Meenu' : 11 }\r\n",
-        "dict1.update(dict2)\r\n",
-        "print('Updated dictionary 1 :')\r\n",
+        "#18.\n",
+        "dict1 = {  'Anu': 5, 'Don': 7, 'Akku' : 10 }\n",
+        "dict2 = {'Aksa': 8,'Alex': 20,'Meenu' : 11 }\n",
+        "dict1.update(dict2)\n",
+        "print('Updated dictionary 1 :')\n",
         "print(dict1)"
       ],
       "execution_count": null,
@@ -232,14 +282,14 @@
         "outputId": "3c7e2db6-6da4-4152-8e92-a6c6d4b4cd05"
       },
       "source": [
-        "#19.\r\n",
-        "num1 = int(input(\"Enter 1st number: \"))\r\n",
-        "num2 = int(input(\"Enter 2nd number: \"))\r\n",
-        "i = 1\r\n",
-        "while(i <= num1 and i <= num2):\r\n",
-        "  if(num1 % i == 0 and num2 % i == 0):\r\n",
-        "    gcd = i\r\n",
-        "  i = i + 1\r\n",
+        "#19.\n",
+        "num1 = int(input(\"Enter 1st number: \"))\n",
+        "num2 = int(input(\"Enter 2nd number: \"))\n",
+        "i = 1\n",
+        "while(i <= num1 and i <= num2):\n",
+        "  if(num1 % i == 0 and num2 % i == 0):\n",
+        "    gcd = i\n",
+        "  i = i + 1\n",
         "print(\"GCD is\", gcd)"
       ],
       "execution_count": null,
@@ -265,11 +315,11 @@
         "outputId": "1440e720-4704-4efe-dd32-58f53bf46559"
       },
       "source": [
-        "#2:\r\n",
-        "y = int (input(\"Enter the final year:\"))\r\n",
-        "print(\"Future leap years from 2021:\")\r\n",
-        "for x in range(2021 , y+1):\r\n",
-        " if(x%4==0) and (x%100!=0) or (x%400==0):\r\n",
+        "#2:\n",
+        "y = int (input(\"Enter the final year:\"))\n",
+        "print(\"Future leap years from 2021:\")\n",
+        "for x in range(2021 , y+1):\n",
+        " if(x%4==0) and (x%100!=0) or (x%400==0):\n",
         "    print(x)"
       ],
       "execution_count": null,
@@ -296,12 +346,12 @@
         "outputId": "bf946bed-9bc3-48ef-b4ad-f4ee07993205"
       },
       "source": [
-        "#20.\r\n",
-        "list = [11, 22, 33, 44, 55]\r\n",
-        "print(\"Original list :\",list)\r\n",
-        "for i in list:\r\n",
-        "   if(i%2 == 0):\r\n",
-        "      list.remove(i)\r\n",
+        "#20.\n",
+        "list = [11, 22, 33, 44, 55]\n",
+        "print(\"Original list :\",list)\n",
+        "for i in list:\n",
+        "   if(i%2 == 0):\n",
+        "      list.remove(i)\n",
         "print(\"List after removing Even numbers : \", list)      "
       ],
       "execution_count": null,
@@ -370,7 +420,7 @@
         "      count = count + 1\n",
         "print(count)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,10 +436,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "9Rc4--zoR72n",
-        "outputId": "dd29698a-5e54-4f00-d7fd-cd2267ac6670",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dd29698a-5e54-4f00-d7fd-cd2267ac6670"
       },
       "source": [
         "#7(a).\n",
@@ -405,7 +455,7 @@
         "else :\n",
         "    print (\"list are of different length\")\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,31 +473,31 @@
       "cell_type": "code",
       "metadata": {
         "id": "5FyFOLbR18NP",
-        "outputId": "2f4bcf94-cd97-41cd-babc-866c3d18a0bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2f4bcf94-cd97-41cd-babc-866c3d18a0bc"
       },
       "source": [
-        "#7(b)\r\n",
-        "list1 = [1, 2, 4, 3, 8]\r\n",
-        "list2 = [1, 2, 4, 3, 5]\r\n",
-        "print (\"the first list is :\" + str(list1))\r\n",
-        "print (\"the second list is :\" + str(list2))\r\n",
-        "sum1 = 0\r\n",
-        "sum2 = 0\r\n",
-        "for x in range(0, len(list1)):\r\n",
-        "    sum1 = sum1 + list1[x]\r\n",
-        "print (\"sum of all elements in given list1 :\", sum1)\r\n",
-        "for x in range(0, len(list2)):\r\n",
-        "   sum2 = sum2 + list2[x]   \r\n",
-        "print (\"sum of all elements in given list2 :\", sum2)\r\n",
-        "if ( sum1 == sum2):\r\n",
-        "   print (\"list sum to same value\") \r\n",
-        "else:\r\n",
+        "#7(b)\n",
+        "list1 = [1, 2, 4, 3, 8]\n",
+        "list2 = [1, 2, 4, 3, 5]\n",
+        "print (\"the first list is :\" + str(list1))\n",
+        "print (\"the second list is :\" + str(list2))\n",
+        "sum1 = 0\n",
+        "sum2 = 0\n",
+        "for x in range(0, len(list1)):\n",
+        "    sum1 = sum1 + list1[x]\n",
+        "print (\"sum of all elements in given list1 :\", sum1)\n",
+        "for x in range(0, len(list2)):\n",
+        "   sum2 = sum2 + list2[x]   \n",
+        "print (\"sum of all elements in given list2 :\", sum2)\n",
+        "if ( sum1 == sum2):\n",
+        "   print (\"list sum to same value\") \n",
+        "else:\n",
         "   print(\"list are of different sum\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -466,23 +516,23 @@
       "cell_type": "code",
       "metadata": {
         "id": "Kbd5E9Qv2EHP",
-        "outputId": "4a6be333-0ca9-46b7-c769-1684cde07519",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4a6be333-0ca9-46b7-c769-1684cde07519"
       },
       "source": [
-        "#7(c).\r\n",
-        "list1 = [1, 2, 4, 3, 8]\r\n",
-        "list2 = [1, 2, 4, 3, 5]\r\n",
-        "print (\"the first  list is :\" + str(list1))\r\n",
-        "print (\"the second list is :\" + str(list2))\r\n",
-        "print (\"the values occur in both lists :\")\r\n",
-        "for x in list1:\r\n",
-        "   if(x in list1 and x in list2):\r\n",
+        "#7(c).\n",
+        "list1 = [1, 2, 4, 3, 8]\n",
+        "list2 = [1, 2, 4, 3, 5]\n",
+        "print (\"the first  list is :\" + str(list1))\n",
+        "print (\"the second list is :\" + str(list2))\n",
+        "print (\"the values occur in both lists :\")\n",
+        "for x in list1:\n",
+        "   if(x in list1 and x in list2):\n",
         "      print(x)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,25 +553,25 @@
       "cell_type": "code",
       "metadata": {
         "id": "i9qsPO482emQ",
-        "outputId": "4ce537cb-915a-40fb-fcf8-ca425408f0c0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4ce537cb-915a-40fb-fcf8-ca425408f0c0"
       },
       "source": [
-        "#5.1090\r\n",
-        "\r\n",
-        "x = []\r\n",
-        "n = int(input(\"enter any integers:\"))\r\n",
-        "for i in range(1, n+1):\r\n",
-        "  a = int(input())\r\n",
-        "  if (a>100):\r\n",
-        "    x.append('over')\r\n",
-        "  else:\r\n",
-        "     x.append(a)\r\n",
+        "#5.1090\n",
+        "\n",
+        "x = []\n",
+        "n = int(input(\"enter any integers:\"))\n",
+        "for i in range(1, n+1):\n",
+        "  a = int(input())\n",
+        "  if (a>100):\n",
+        "    x.append('over')\n",
+        "  else:\n",
+        "     x.append(a)\n",
         "print(\"modified list:\", x)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -542,21 +592,21 @@
       "cell_type": "code",
       "metadata": {
         "id": "zy-9ZMo33Ne2",
-        "outputId": "6b481054-a122-4378-a016-023b67ccd8c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6b481054-a122-4378-a016-023b67ccd8c9"
       },
       "source": [
-        "#8.\r\n",
-        "def change_char(str1):\r\n",
-        "  char = str1[0]\r\n",
-        "  str1 = str1.replace(char, '$')\r\n",
-        "  str1 = char + str1[1:]\r\n",
-        "  return str1\r\n",
+        "#8.\n",
+        "def change_char(str1):\n",
+        "  char = str1[0]\n",
+        "  str1 = str1.replace(char, '$')\n",
+        "  str1 = char + str1[1:]\n",
+        "  return str1\n",
         "print(change_char('agna'))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -571,18 +621,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "CgIGKpIp4LCb",
-        "outputId": "7c1c9e97-aaf5-4e87-ac6b-a21d5ee440ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7c1c9e97-aaf5-4e87-ac6b-a21d5ee440ac"
       },
       "source": [
-        "#9.\r\n",
-        "a = input(\"enter a string\")\r\n",
-        "print(\"new string :\")\r\n",
+        "#9.\n",
+        "a = input(\"enter a string\")\n",
+        "print(\"new string :\")\n",
         "print(a[-1:] + a[1:-1] + a[0])"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -599,21 +649,21 @@
       "cell_type": "code",
       "metadata": {
         "id": "eWlUZ8_04c3i",
-        "outputId": "44a136b6-e9f0-47ff-fdd8-ecaa6832287b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "44a136b6-e9f0-47ff-fdd8-ecaa6832287b"
       },
       "source": [
-        "#16.\r\n",
-        "def chars_mix_up(a, b):\r\n",
-        "  new_a = b[:2] + a[2:]\r\n",
-        "  new_b = a[:2] + b[2:]\r\n",
-        "\r\n",
-        "  return new_a + ' ' + new_b\r\n",
+        "#16.\n",
+        "def chars_mix_up(a, b):\n",
+        "  new_a = b[:2] + a[2:]\n",
+        "  new_b = a[:2] + b[2:]\n",
+        "\n",
+        "  return new_a + ' ' + new_b\n",
         "print(chars_mix_up('agna', 'thomas'))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -628,19 +678,19 @@
       "cell_type": "code",
       "metadata": {
         "id": "2-IErMwj5brR",
-        "outputId": "747bc7b6-a1d6-42b3-aaef-029ea47a66de",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "747bc7b6-a1d6-42b3-aaef-029ea47a66de"
       },
       "source": [
-        "#3(a).\r\n",
-        "mylist =[12, 34, 56, -9, -7]\r\n",
-        "print(\"firstlist:\" , mylist)\r\n",
-        "newlist =[x for x in mylist if x > 0]\r\n",
+        "#3(a).\n",
+        "mylist =[12, 34, 56, -9, -7]\n",
+        "print(\"firstlist:\" , mylist)\n",
+        "newlist =[x for x in mylist if x > 0]\n",
         "print(\"newlist :\",newlist)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -656,22 +706,22 @@
       "cell_type": "code",
       "metadata": {
         "id": "0cEU1h8d5k1m",
-        "outputId": "b5928ae0-1b71-42ab-d0b5-6438f4243cc9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b5928ae0-1b71-42ab-d0b5-6438f4243cc9"
       },
       "source": [
-        "#3(b).n=int(input(\"enter ther limit\"))\r\n",
-        "l=[]\r\n",
-        "for i in range(0, n):\r\n",
-        "  num=int(input(\"enter no:\"))\r\n",
-        "  l.append(num)\r\n",
-        "print(\"entered list\", l)\r\n",
-        "l1=[i*i for i in l]\r\n",
+        "#3(b).n=int(input(\"enter ther limit\"))\n",
+        "l=[]\n",
+        "for i in range(0, n):\n",
+        "  num=int(input(\"enter no:\"))\n",
+        "  l.append(num)\n",
+        "print(\"entered list\", l)\n",
+        "l1=[i*i for i in l]\n",
         "print(\"list of squres\",l1)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -692,22 +742,22 @@
       "cell_type": "code",
       "metadata": {
         "id": "NirCP0Hk50xZ",
-        "outputId": "2544033e-98d9-4525-98b1-229315528d4c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2544033e-98d9-4525-98b1-229315528d4c"
       },
       "source": [
-        "#3(c).\r\n",
-        "word = input(\"enter a word\")\r\n",
-        "vowels= ['a', 'e', 'i', 'o', 'u']\r\n",
-        "list= []\r\n",
-        "for x in word:\r\n",
-        "  if(x in vowels and x not in list):\r\n",
-        "    list.append(x)\r\n",
+        "#3(c).\n",
+        "word = input(\"enter a word\")\n",
+        "vowels= ['a', 'e', 'i', 'o', 'u']\n",
+        "list= []\n",
+        "for x in word:\n",
+        "  if(x in vowels and x not in list):\n",
+        "    list.append(x)\n",
         "print(\"vowel present in the given word is:\",list)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
